syntax = "proto3";

package token.v1.pb;

option go_package ="github.com/fredyzh/user_manager/api/token/v1/pb";

message JWTSecrets{
    // @gotags: bson:"user_id" json:"user_id"
    string userId=1;
    // @gotags: bson:"key" json:"key"
    string key=2;
    // @gotags: bson:"value" json:"value"
    string value=3;
}